Adding styling of menu and hero section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           alt="Logo Hodinová nemanželka"
         />
         <ul class="menu">
-          <li><a class="menu__link" href="#about">O mně</a></li>
+          <li><a class="menu__link" href="#about">O&nbsp;mně</a></li>
           <li><a class="menu__link" href="#offer">Služby</a></li>
           <li><a class="menu__link" href="#price">Ceník</a></li>
           <li><a class="menu__link" href="#contact">Kontakt</a></li>
