Adding styling of contact form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hodinová nemanželka</title>
+    <title>
+      Hodinová nemanželka: kompletní úklid domácnosti- Plzeň a okolí
+    </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -53,43 +55,49 @@
     <main class="main">
       <section class="main__section main__section--about" id="about">
         <h2 class="title title--section">O mně</h2>
-        <img
-          class="image"
-          src="/images/photo-placeholder.png"
-          alt="Fotografie autorky"
-        />
-        <p class="main__text">
-          Vítám Tě na svých stránkách, kde nabízím služby úklidu a výpomoci
-          v domácnosti.
-        </p>
-        <p class="main__text">
-          Abys věděl, koho si pouštíš domů, napíšu Ti o sobě pár slov.
-        </p>
-        <p class="main__text">
-          Narodila jsem se v roce 1989 v severních Čechách, v malé obci na
-          Liberecku. Od mala jsem byla vedena k práci, počínaje skládáním uhlí,
-          štípání dřeví, tak také samozřejmě pomoc v domácnosti s úklidem.
-        </p>
-        <p class="main__text">
-          Vystudovala jsem Západočeskou univerzitu v Plzni, fakultu
-          Pedagogickou. Touto cestou jsem se nikdy nevydala a vrhla jsem se na
-          dynamičtější povolání ve strojírenství.
-        </p>
-        <p class="main__text">
-          Protože pracuji zejména v kanceláři, fyzická práce je pro mě relax a
-          odpočinek.
-        </p>
-        <p class="main__text">
-          Proto bych Vám ráda nabídla své služby. Úklid pro mě není práce nebo
-          nutnost, úklid je pro mě forma zábavy a leckdy i výzva.
-        </p>
+        <div class="grid--about">
+          <img
+            class="image"
+            src="/images/photo-placeholder.png"
+            alt="Fotografie autorky"
+          />
+          <div>
+            <p class="main__text">
+              Vítám Tě na svých stránkách, kde nabízím služby úklidu a výpomoci
+              v domácnosti.
+            </p>
+            <p class="main__text">
+              Abys věděl, koho si pouštíš domů, napíšu Ti o sobě pár slov.
+            </p>
+            <p class="main__text">
+              Narodila jsem se v roce 1989 v severních Čechách, v malé obci na
+              Liberecku. Od mala jsem byla vedena k práci, počínaje skládáním
+              uhlí, štípání dřeví, tak také samozřejmě pomoc v domácnosti
+              s úklidem.
+            </p>
+            <p class="main__text">
+              Vystudovala jsem Západočeskou univerzitu v Plzni, fakultu
+              Pedagogickou. Touto cestou jsem se nikdy nevydala a vrhla jsem se
+              na dynamičtější povolání ve strojírenství.
+            </p>
+            <p class="main__text">
+              Protože pracuji zejména v kanceláři, fyzická práce je pro mě relax
+              a odpočinek.
+            </p>
+            <p class="main__text">
+              Proto bych Vám ráda nabídla své služby. Úklid pro mě není práce
+              nebo nutnost, úklid je pro mě forma zábavy a leckdy i výzva.
+            </p>
+          </div>
+        </div>
       </section>
       <section class="main__section main__section--offer" id="offer">
         <h2 class="title title--section">Služby</h2>
         <p class="main__text">
-          Hlavní službou, kterou nabízím je kompletní úklid Vaší domácnosti.
-          Není problém se dohodnout na doplňkových službách (např. venčení
-          pejska, hlídání dětí, nákup aj.).
+          Hlavní službou, kterou nabízím je kompletní úklid Vaší domácnosti
+          <strong class="text--bold">v Plzni a okolí</strong>. Není problém se
+          dohodnout na doplňkových službách (např. venčení pejska, hlídání dětí,
+          nákup aj.).
         </p>
         <div class="container">
           <div class="container__item">Utírání prachu</div>
@@ -149,6 +157,9 @@
               rows="10"
             ></textarea>
           </div>
+          <button class="button button--submit" type="submit">
+            Poslat poptávku
+          </button>
         </form>
       </section>
     </main>
@@ -160,7 +171,8 @@
         <a class="link" href="mailto:michaela.buckova@seznam.cz"
           >michaela.buckova@seznam.cz</a
         ><br />
-        <i class="fi fi-rr-phone-call"></i> +420 736 108 266<br />
+        <i class="fi fi-rr-phone-call"></i
+        ><a class="link" href="tel:+420736108266"> +420 736 108 266</a><br />
         <i class="fi fi-brands-instagram"></i>
         <a class="link" href="https://www.instagram.com/hodinova_nemanzelka/"
           >hodinova_nemanzelka</a
