Adding meta tags and Favicon icon

--- a/index.html
+++ b/index.html
@@ -3,16 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>
-      Hodinová nemanželka: kompletní úklid domácnosti- Plzeň a okolí
+      Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí
     </title>
+    <meta
+      name="title"
+      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí
+"
+    />
+    <meta
+      name="description"
+      content="Poskytuji efektivní a důkladnou péči o celý Váš domov. Získejte čistý a uklizený domov díky mým úklidovým službám. Kontaktujte mě ještě dnes!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hodinova-nemanzelka.cz/" />
+    <meta
+      property="og:title"
+      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí
+"
+    />
+    <meta
+      property="og:description"
+      content="Poskytuji efektivní a důkladnou péči o celý Váš domov. Získejte čistý a uklizený domov díky mým úklidovým službám. Kontaktujte mě ještě dnes!"
+    />
+    <meta
+      property="og:image"
+      content="https://hodinova-nemanzelka.cz/images/meta-image.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://hodinova-nemanzelka.cz/" />
+    <meta
+      property="twitter:title"
+      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí
+"
+    />
+    <meta
+      property="twitter:description"
+      content="Poskytuji efektivní a důkladnou péči o celý Váš domov. Získejte čistý a uklizený domov díky mým úklidovým službám. Kontaktujte mě ještě dnes!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://hodinova-nemanzelka.cz/images/meta-image.jpg"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
+    <link rel="stylesheet" href="/css/style.css" />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+
+    <!-- Flaticon Icons -->
     <link
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"
@@ -21,10 +73,24 @@
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css"
     />
+
+    <!-- Favicon Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#603cba" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- JavaScript File for Hamburger Menu -->
     <script src="index.js" defer></script>
   </head>
+
   <body>
+    <!-- Hero Section with NavBar -->
     <header class="hero">
+      <!-- Navigation -->
       <nav class="navigation">
         <img
           class="logo"
@@ -42,6 +108,8 @@
           <i class="fi fi-rr-cross close__icon"></i>
         </div>
       </nav>
+
+      <!-- Hero Title -->
       <h1 class="title title--main">
         Hledáš pomoc s úklidem a jinými domácími záležitostmi?
       </h1>
@@ -52,7 +120,10 @@
         >
       </div>
     </header>
+
+    <!-- Main Section -->
     <main class="main">
+      <!-- Section About Me -->
       <section class="main__section main__section--about" id="about">
         <h2 class="title title--section">O mně</h2>
         <div class="grid--about">
@@ -91,6 +162,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Section Offer -->
       <section class="main__section main__section--offer" id="offer">
         <h2 class="title title--section">Služby</h2>
         <p class="main__text">
@@ -114,6 +187,8 @@
           <div class="container__item">Hlídání dětí</div>
         </div>
       </section>
+
+      <!-- Section Price -->
       <section class="main__section main__section--price" id="price">
         <h2 class="title title--section">Ceník</h2>
         <p class="main__text">
@@ -128,13 +203,21 @@
           přes QR kód.
         </p>
       </section>
+
+      <!-- Section Contact -->
       <section class="main__section main__section--contact" id="contact">
         <h2 class="title title--section">Kontakt</h2>
         <p class="main__text">
           Pokud i Ty chceš mít více času na rodinu, práci nebo svoje koníčky,
           pošli mi poptávku a já se Ti ozvu.
         </p>
-        <form class="form" action="" method="post">
+
+        <!-- Contact Form -->
+        <form
+          class="form"
+          action="https://submit-form.com/EGJ0Cog8"
+          method="post"
+        >
           <div class="form__item">
             <label class="form__label" for="name">Jméno</label>
             <input class="form__field" type="text" name="name" id="name" />
@@ -163,6 +246,8 @@
         </form>
       </section>
     </main>
+
+    <!--Site Footer -->
     <footer class="footer">
       <p class="main__text">
         <span class="text--bold">Mgr. Michaela Bučková</span><br />
