Preventing the redirect

--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@
           action="https://submit-form.com/EGJ0Cog8"
           method="post"
         >
+          <input
+            type="hidden"
+            name="_redirect"
+            value="https:/hodinova-nemanzelka.cz/"
+          />
           <div class="form__item">
             <label class="form__label" for="name">Jméno</label>
             <input class="form__field" type="text" name="name" id="name" />
