Fixing form error

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <input
             type="hidden"
             name="_redirect"
-            value="https:/hodinova-nemanzelka.cz/"
+            value="https://hodinova-nemanzelka.cz/"
           />
           <div class="form__item">
             <label class="form__label" for="name">Jméno</label>
