Adding Netlify Form

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       content="https://hodinova-nemanzelka.cz/images/meta-image.jpg"
     />
 
+    <meta name="author" content="Lucie Bučková" />
     <!-- Meta Tags Generated with https://metatags.io -->
 
     <link rel="stylesheet" href="/css/style.css" />
