Fixing form error

--- a/index.html
+++ b/index.html
@@ -214,16 +214,7 @@
         </p>
 
         <!-- Contact Form -->
-        <form
-          class="form"
-          action="https://submit-form.com/EGJ0Cog8"
-          method="post"
-        >
-          <input
-            type="hidden"
-            name="_redirect"
-            value="https://hodinova-nemanzelka.cz/"
-          />
+        <form class="form" data-netlify="true" method="post">
           <div class="form__item">
             <label class="form__label" for="name">Jméno</label>
             <input class="form__field" type="text" name="name" id="name" />
