--- a/index.html
+++ b/index.html
@@ -214,7 +214,12 @@
         </p>
 
         <!-- Contact Form -->
-        <form class="form" data-netlify="true" method="post">
+        <form
+          class="form"
+          action="/success.html"
+          data-netlify="true"
+          method="post"
+        >
           <div class="form__item">
             <label class="form__label" for="name">Jméno</label>
             <input class="form__field" type="text" name="name" id="name" />
