Adding real photo

--- a/index.html
+++ b/index.html
@@ -128,11 +128,7 @@
       <section class="main__section main__section--about" id="about">
         <h2 class="title title--section">O mně</h2>
         <div class="grid--about">
-          <img
-            class="image"
-            src="/images/photo-placeholder.png"
-            alt="Fotografie autorky"
-          />
+          <img class="image" src="/images/foto.jpg" alt="Fotografie autorky" />
           <div>
             <p class="main__text">
               Vítám Tě na svých stránkách, kde nabízím služby úklidu a výpomoci
