--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <section class="main__section main__section--offer" id="offer">
         <h2 class="title title--section">Služby</h2>
         <p class="main__text">
-          Hlavní službou, kterou nabízím je kompletní úklid Vaší domácnosti
+          Hlavní službou, kterou nabízím je kompletní úklid Tvé domácnosti
           <strong class="text--bold">v Plzni a okolí</strong>. Není problém se
           dohodnout na doplňkových službách (např. venčení pejska, hlídání dětí,
           nákup aj.).
@@ -192,7 +192,7 @@
           Pravidelný úklid: 250,- Kč/hod<br />
           Jednorázový úklid: 350,-Kč/hod<br />
           Ostatní služby: cena dohodou<br />
-          Dopravné: 3,-Kč/km
+          Dopravné: 10,-Kč/km
         </p>
         <p class="main__text">
           Pokud se domluvíme na pravidelném úklidu, je možné si ho předplatit na
