--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     </title>
     <meta
       name="title"
-      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí
-"
+      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí"
     />
     <meta
       name="description"
@@ -23,8 +22,7 @@
     <meta property="og:url" content="https://hodinova-nemanzelka.cz/" />
     <meta
       property="og:title"
-      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí
-"
+      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí"
     />
     <meta
       property="og:description"
@@ -40,8 +38,7 @@
     <meta property="twitter:url" content="https://hodinova-nemanzelka.cz/" />
     <meta
       property="twitter:title"
-      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí
-"
+      content="Hodinová nemanželka: kompletní úklid domácnosti - Plzeň a okolí"
     />
     <meta
       property="twitter:description"
@@ -128,7 +125,11 @@
       <section class="main__section main__section--about" id="about">
         <h2 class="title title--section">O mně</h2>
         <div class="grid--about">
-          <img class="image" src="/images/foto.jpg" alt="Fotografie autorky" />
+          <img
+            class="image"
+            src="/images/foto.jpg"
+            alt="Fotografie hodinové nemanželky"
+          />
           <div>
             <p class="main__text">
               Vítám Tě na svých stránkách, kde nabízím služby úklidu a výpomoci
@@ -164,7 +165,7 @@
       <section class="main__section main__section--offer" id="offer">
         <h2 class="title title--section">Služby</h2>
         <p class="main__text">
-          Hlavní službou, kterou nabízím je kompletní úklid Tvé domácnosti
+          Hlavní službou, kterou nabízím, je kompletní úklid Tvé domácnosti
           <strong class="text--bold">v Plzni a okolí</strong>. Není problém se
           dohodnout na doplňkových službách (např. venčení pejska, hlídání dětí,
           nákup aj.).
