Changing section padding, size of hamburger etc.

--- a/index.html
+++ b/index.html
@@ -108,13 +108,11 @@
       </nav>
 
       <!-- Hero Title -->
-      <h1 class="title title--main">
-        Hledáš pomoc s úklidem a jinými domácími záležitostmi?
-      </h1>
+      <h1 class="title title--main">Hledáš výpomoc v&nbsp;domácnosti?</h1>
       <p class="title title--submain">Jsi na správném místě!</p>
       <div class="button">
         <a class="button__link" href="#contact"
-          >K uklizenému a útulnému domovu tudy →</a
+          >K uklizenému a&nbsp;útulnému domovu tudy →</a
         >
       </div>
     </header>
