Changing primary button text

--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
       <h1 class="title title--main">Hledáš výpomoc v&nbsp;domácnosti?</h1>
       <p class="title title--submain">Jsi na správném místě!</p>
       <div class="button">
-        <a class="button__link" href="#contact"
-          >K uklizenému a&nbsp;útulnému domovu tudy →</a
-        >
+        <a class="button__link" href="#contact">K uklizenému domovu tudy →</a>
       </div>
     </header>
 
