--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <!-- Hero Title -->
       <h1 class="title title--main">Hledáš výpomoc v&nbsp;domácnosti?</h1>
       <p class="title title--submain">Jsi na správném místě!</p>
-      <div class="button">
+      <div class="button button--primary">
         <a class="button__link" href="#contact">K uklizenému domovu tudy →</a>
       </div>
     </header>
